[+] ALF-374. Мэппинг процессных переменных завершенного процесса с атрибутами документа.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1248 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model.properties
+++ b/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model.properties
@@ -4,12 +4,17 @@ lecm-stmeditor_model.property.lecm-stmeditor_workflowId.title=Workflow ID
 lecm-stmeditor_model.property.lecm-stmeditor_transitionExpression.title=Expression
 lecm-stmeditor_model.property.lecm-stmeditor_transitionLabel.title=Transition Name
 
-lecm-stmeditor_model.property.lecm-stmeditor_inputWorkflowToVariable.title=to Variable
-lecm-stmeditor_model.property.lecm-stmeditor_inputWorkflowVariableType.title=Type
-lecm-stmeditor_model.property.lecm-stmeditor_inputWorkflowVariableValue.title=Value
-lecm-stmeditor_model.property.lecm-stmeditor_outputWorkflowToVariable.title=Variable
-lecm-stmeditor_model.property.lecm-stmeditor_outputWorkflowVariableType.title=Type
-lecm-stmeditor_model.property.lecm-stmeditor_outputWorkflowVariableValue.title=Value
+lecm-stmeditor_model.property.lecm-stmeditor_inputToValue.title=\u0418\u043C\u044F \u043F\u0435\u0440\u0435\u043C\u0435\u043D\u043D\u043E\u0439
+lecm-stmeditor_model.property.lecm-stmeditor_inputFromType.title=\u0422\u0438\u043F \u043F\u0435\u0440\u0435\u0434\u0430\u0447\u0438
+lecm-stmeditor_model.property.lecm-stmeditor_inputToType.title=\u041F\u0435\u0440\u0435\u0434\u0430\u0447\u0430 \u0432 \u043F\u0440\u043E\u0446\u0435\u0441\u0441
+lecm-stmeditor_model.property.lecm-stmeditor_inputFromValue.title=\u0417\u043D\u0430\u0447\u0435\u043D\u0438\u0435
+
+lecm-stmeditor_model.property.lecm-stmeditor_outputToValue.title=\u0418\u043C\u044F \u043F\u0435\u0440\u0435\u043C\u0435\u043D\u043D\u043E\u0439
+lecm-stmeditor_model.property.lecm-stmeditor_outputFromType.title=\u0422\u0438\u043F \u043F\u0435\u0440\u0435\u0434\u0430\u0447\u0438
+lecm-stmeditor_model.property.lecm-stmeditor_outputFromValue.title=\u0417\u043D\u0430\u0447\u0435\u043D\u0438\u0435
+lecm-stmeditor_model.property.lecm-stmeditor_outputToType.title=\u041F\u0435\u0440\u0435\u0434\u0430\u0447\u0430 \u0432 \u043C\u0430\u0448\u0438\u043D\u0443 \u0441\u043E\u0441\u0442\u043E\u044F\u043D\u0438\u0439
+
+
 lecm-stmeditor_model.property.lecm-stmeditor_transitionWorkflowId.title=Workflow
 lecm-stmeditor_model.property.lecm-stmeditor_workflowLabel.title=Title
 lecm-stmeditor_model.property.lecm-stmeditor_assignee.title=Assignee
@@ -38,8 +43,11 @@ lecm-stmeditor_model.property.lecm-stmeditor_scriptLabel.title=Title
 lecm-stmeditor_model.property.lecm-stmeditor_actionScript.title=Script
 
 
-listconstraint.lecm-stmeditor_variableSettingType.VARIABLE=Variable
-listconstraint.lecm-stmeditor_variableSettingType.VALUE=Value
+listconstraint.lecm-stmeditor_fromTypeList.FIELD=Document Field
+listconstraint.lecm-stmeditor_fromTypeList.VARIABLE=Variable
+listconstraint.lecm-stmeditor_fromTypeList.VALUE=Value
+listconstraint.lecm-stmeditor_toTypeList.VARIABLE=Variable
+listconstraint.lecm-stmeditor_toTypeList.FIELD=Document Field
 listconstraint.lecm-stmeditor_permissionType.noaccess=No Access
 listconstraint.lecm-stmeditor_permissionType.readonly=Read
 listconstraint.lecm-stmeditor_permissionType.full=Write
