1) Рефакторинг. Добавлен модуль lecm-calendar-repo-api, куда вынесены все интерфейсы. 2) В валидаторе для создания нового отсутствия устранены две ошибки: возможное зацикливание... 3) ...и NullPointerExeption.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1260 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-calendar/pom.xml
+++ b/lecm-calendar/pom.xml
@@ -17,7 +17,8 @@
 	<description>Calendar module</description>
 
 	<modules>
+		<module>api</module>
 		<module>repo</module>
-		 <module>share</module>
+		<module>share</module>
 	</modules>
 </project>
