[~]переписал определение типа и категории события без использования solr [+]добавил логирование создания и редактирования всех объектов с префиксом lecm [~] обновил справочник "Типов объектов"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1270 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-business-journal/repo/pom.xml
+++ b/lecm-business-journal/repo/pom.xml
@@ -67,6 +67,11 @@
             <groupId>org.quartz-scheduler</groupId>
             <artifactId>quartz</artifactId>
         </dependency>
+        <dependency>
+            <groupId>ru.it.lecm.dictionary</groupId>
+            <artifactId>dictionary-repo-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
         <!-- Don't add here amp dependencies as it will break amp packaging -->
     </dependencies>
     <!--
