--- a/pom.xml
+++ b/pom.xml
@@ -289,6 +289,12 @@
 				<version>1.8.3-alfresco-patched</version>
 				<scope>provided</scope>
 			</dependency>
+                        <dependency>
+                            <groupId>commons-httpclient</groupId>
+                            <artifactId>commons-httpclient</artifactId>
+                            <version>3.1</version>
+                            <scope>provided</scope>
+                        </dependency>
 		</dependencies>
 	</dependencyManagement>
 
