Мессенджер будет компиляться только у тех, у кого включен профиль lecmIM
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1279 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/pom.xml
+++ b/pom.xml
@@ -445,4 +445,13 @@
         </pluginManagement>
     </build>
 
+    <profiles>
+        <profile>
+            <id>lecmIM</id>
+            <modules>
+                <module>lecm-im</module>
+            </modules>
+        </profile>
+    </profiles>
+
 </project>
