--- a/server/alfresco/pom.xml
+++ b/server/alfresco/pom.xml
@@ -482,5 +482,18 @@
 			</plugin>
 		</plugins>
 	</reporting>
-
+	<profiles>
+		<profile>
+			<id>lecmIM</id>
+			<dependencies>
+				<dependency>
+					<groupId>ru.it.lecm.lecm-im</groupId>
+					<artifactId>lecm-im-repo</artifactId>
+					<version>${platform.version}</version>
+					<type>amp</type>
+					<scope>runtime</scope>
+				</dependency>
+			</dependencies>
+		</profile>
+	</profiles>
 </project>
