1) В пользовательское меню (верний правый угол) добавлен пункт "Меня нет в офисе". 2) Для пункта меню "Меня нет в офисе" реализовано добавление новых экземпляров отсутствия. 3) В валидатор, используемый при создании нового отсутствия, добавлена загрузка сообщний об ошибках из properties-файлов.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1290 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-calendar/share/src/main/java/ru/it/lecm/wcalendar/form/form.properties
+++ b/lecm-calendar/share/src/main/java/ru/it/lecm/wcalendar/form/form.properties
@@ -62,3 +62,13 @@ button.new-my-absence=Add my absence
 button.new-employee-absence=Add employee absence
 label.absence.create-my-absence.title=My new absence
 label.absence.create-employee-absence.title=New employee absence
+
+header.instant-absence.label=Out of office
+header.instant-absence.description=Declare my absence in office
+label.absence.create-instant-absence.title=Out of office
+message.absence.new-instant.success="Out of office" operation successful
+message.absence.new-instant.failure=ERROR: "Out of office" operation failed
+
+message.error.absence.date-interval-validation.early-begin=Absence beginnig is earlier than today's date
+message.error.absence.date-interval-validation.early-end=Absence end is earlier than its beginning
+message.error.absence.date-interval-validation.already-planned=Absence is already planned on this date
