ALF-387 В лог выгружаются не все данные из Бизнес-журнала
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1296 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-business-journal/repo/src/main/config/messages/business-journal.properties
+++ b/lecm-business-journal/repo/src/main/config/messages/business-journal.properties
@@ -71,3 +71,8 @@ lecm-busjournal_businessJournalModel.property.lecm-busjournal_archiver-deep.titl
 lecm-busjournal_businessJournalModel.property.lecm-busjournal_archiver-deep.description=Deep
 lecm-busjournal_businessJournalModel.property.lecm-busjournal_archiver-period.title=Period in Days
 lecm-busjournal_businessJournalModel.property.lecm-busjournal_archiver-period.description=Period in Days
+
+lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-objType-assoc-text-content.title=Object Type
+lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-objType-assoc-text-content.description=Object Type
+lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-evCategory-assoc-text-content.title=Event Category
+lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-evCategory-assoc-text-content.description=Event Category
