Добавлена функция "Немедленная отмена отсутсвия": если у пользователя запланировано отсутствие, то при входе в систему повляется всплывающее окно с предложением отмекить отсутствие. Если на даный момент у пользователя запланировано отсутствие, то в верхнем правом выпадающем меню скрывается пункт "Меня нет в офисе" и появляется "Отменить отсутствие"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1309 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-calendar/share/src/main/java/ru/it/lecm/wcalendar/form/form.properties
+++ b/lecm-calendar/share/src/main/java/ru/it/lecm/wcalendar/form/form.properties
@@ -69,6 +69,13 @@ label.absence.create-instant-absence.title=Out of office
 message.absence.new-instant.success="Out of office" operation successful
 message.absence.new-instant.failure=ERROR: "Out of office" operation failed
 
+header.cancel-absence.label=Cancel my absence
+header.cancel-absence.description=Immediately cancel my absence in office
+
+title.absence.cancel-absence=Cancel my absence
+message.absence.cancel-absence.confirmation=Your absence is declared. Doy yoh want to cancel it?
+message.absence.cancel-absence.success=Absence cancelled
+
 message.error.absence.date-interval-validation.early-begin=Absence beginnig is earlier than today's date
 message.error.absence.date-interval-validation.early-end=Absence end is earlier than its beginning
 message.error.absence.date-interval-validation.already-planned=Absence is already planned on this date
