[~]рефакторинг - объединены файлы с локализацией  [+]добавлено сообщение при достижении лимита записей в поиске
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1325 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/share/src/main/java/ru/it/lecm/base-share/base-share.properties
+++ b/lecm-base/share/src/main/java/ru/it/lecm/base-share/base-share.properties
@@ -4,3 +4,10 @@ actions.add=Add
 actions.edit=Edit
 actions.delete-row=Delete
 logicecm.view=View
+
+logicecm.base.elements-for-select=Elements for selection
+logicecm.base.selected-elements=Selected elements
+logicecm.base.select-tree-element=Please, select element from tree
+logicecm.base.create-new-button.label=+
+
+label.limit_reached=Limit reached: records were found more than returned. Please edit your search query to get the other records.
