Изменен заголовок окна редактирования свойств справочника.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1329 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/all/datagrid/datagrid.get.properties
+++ b/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/all/datagrid/datagrid.get.properties
@@ -1,7 +1,7 @@
 label.column.select=Select
 label.column.actions=Actions
 label.create-row.title=Create
-label.edit-row.title=Edit Data Item
+label.edit-row.title=Edit thr properties of dictionary
 label.edit-row.edit-dataitem=Data Item Edit page...
 
 message.select-list=No Data List selected.
