1) Изменен внешний вид формы "Меня нет в офисе": новые названия пунктов, более компактное расположение. 2) В форме "Меня нет в офисе" теперь по умолчанию выбрана причина "Другое". 3) Удалены ненужные пустые файлы.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1334 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-calendar/share/src/main/java/ru/it/lecm/wcalendar/form/form.properties
+++ b/lecm-calendar/share/src/main/java/ru/it/lecm/wcalendar/form/form.properties
@@ -66,6 +66,9 @@ label.absence.create-employee-absence.title=New employee absence
 header.instant-absence.label=Out of office
 header.instant-absence.description=Declare my absence in office
 label.absence.create-instant-absence.title=Out of office
+label.absence.form.out-of-office.back=I'll be back
+label.absence.form.out-of-office.unlimited=Don't know
+label.absence.form.out-of-office.reason=Reason
 message.absence.new-instant.success="Out of office" operation successful
 message.absence.new-instant.failure=ERROR: "Out of office" operation failed
 
