[+]добавлена динамическая paging в грид
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1353 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-business-journal/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/business-journal/datagrid/datagrid.get.properties
+++ b/lecm-business-journal/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/business-journal/datagrid/datagrid.get.properties
@@ -27,7 +27,7 @@ menu.select.none=None
 menu.select.invert=Invert Selection
 
 ## DataTable messages
-message.loading=Loading the Data List...
+message.loading=Loading...
 message.error=Could not access the Data List
 message.empty=No list items
 
