1) В "Мой профиль" добавлена кнопка и страница "Меня нет в офисе". 2) Пункт "Меня нет в офисе" в выпадающем верхнем меню теперь ведет себя так: если есть возможность создать всплывающее окно-форму (подгружены все необходимые скрипты), то создаем его. В противном случае (находимся на дашборде, служебных страницах и пр.) - переход на страницу "Мой профиль > Меня нет в офисе".
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1359 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-user-profile/share/src/main/java/ru/it/lecm/user-profile/form/form.properties
+++ b/lecm-user-profile/share/src/main/java/ru/it/lecm/user-profile/form/form.properties
@@ -6,3 +6,4 @@ label.user-profile.menu.delegation.btn=Manage my delegayion settings
 header.user-profile.label=Logic ECM: My profile
 header.user-profile.description=Manage your personal settings
 page.user-profile.delegation.title=My profile > Delegation
+page.user-profile.instant-absence.title=My profile > Out of office
