ALF-423: Добавленно логгирование в бизнес-журнал для справочников
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1368 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-dictionary/repo/pom.xml
+++ b/lecm-dictionary/repo/pom.xml
@@ -71,6 +71,15 @@
             <artifactId>base-repo-api</artifactId>
             <version>${project.version}</version>
         </dependency>
+	    <dependency>
+		    <groupId>ru.it.lecm.business-journal</groupId>
+		    <artifactId>business-journal-repo-api</artifactId>
+		    <version>${project.version}</version>
+	    </dependency>
+	    <dependency>
+		    <groupId>org.slf4j</groupId>
+		    <artifactId>slf4j-api</artifactId>
+	    </dependency>
         <!-- Don't add here amp dependencies as it will break amp packaging -->
     </dependencies>
     <!--
