заготовка под вебскрипт который будет тестировать альфреску
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1374 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,7 @@
 		<module>lecm-business-journal</module>
 		<module>lecm-calendar</module>
 		<module>lecm-user-profile</module>
+		<module>lecm-self-test</module>
 	</modules>
     <scm>
         <connection>scm:svn:https://svn.datateh.ru/alfrescoecm/Business Platform/trunk/</connection>
