--- a/server/alfresco/pom.xml
+++ b/server/alfresco/pom.xml
@@ -247,6 +247,13 @@
             <type>amp</type>
             <scope>runtime</scope>
         </dependency>
+		<dependency>
+			<groupId>ru.it.lecm.self-test</groupId>
+			<artifactId>self-test-repo</artifactId>
+			<version>${platform.version}</version>
+			<type>amp</type>
+			<scope>runtime</scope>
+		<dependency>
 	</dependencies>
 
 	<build>
@@ -340,7 +347,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
-				<version>2.3</version>
+				<version>2.6</version>
 				<executions>
 					<execution>
 						<id>unpack-amps</id>
