руки крюки блин
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1376 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/server/alfresco/pom.xml
+++ b/server/alfresco/pom.xml
@@ -253,7 +253,7 @@
 			<version>${platform.version}</version>
 			<type>amp</type>
 			<scope>runtime</scope>
-		<dependency>
+		</dependency>
 	</dependencies>
 
 	<build>
