--- a/lecm-base/share/src/main/java/ru/it/lecm/base-share/base-share.properties
+++ b/lecm-base/share/src/main/java/ru/it/lecm/base-share/base-share.properties
@@ -11,3 +11,6 @@ logicecm.base.select-tree-element=Please, select element from tree
 logicecm.base.create-new-button.label=+
 
 label.limit_reached=Limit reached: records were found more than returned. Please edit your search query to get the other records.
+
+info.connections=Connections
+button.connection.add=Add connection
