ALF-440: Добавлена таблица со связанными документами
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1389 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/share/src/main/java/ru/it/lecm/base-share/base-share.properties
+++ b/lecm-base/share/src/main/java/ru/it/lecm/base-share/base-share.properties
@@ -14,3 +14,6 @@ label.limit_reached=Limit reached: records were found more than returned. Please
 
 info.connections=Connections
 button.connection.add=Add connection
+message.connection.add.success=Connection added
+message.connection.add.failure=Connection creation failure
+label.connected.documents=Connected documents
