--- a/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model.properties
+++ b/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model.properties
@@ -3,6 +3,7 @@ lecm-stmeditor_model.association.lecm-stmeditor_role-assoc.title=Business Role
 lecm-stmeditor_model.property.lecm-stmeditor_workflowId.title=Workflow ID
 lecm-stmeditor_model.property.lecm-stmeditor_transitionExpression.title=Expression
 lecm-stmeditor_model.property.lecm-stmeditor_transitionLabel.title=Transition Name
+lecm-stmeditor_model.property.lecm-stmeditor_conditionAccess.title=Expression Accessabily
 
 lecm-stmeditor_model.property.lecm-stmeditor_inputToValue.title=\u0418\u043C\u044F \u043F\u0435\u0440\u0435\u043C\u0435\u043D\u043D\u043E\u0439
 lecm-stmeditor_model.property.lecm-stmeditor_inputFromType.title=\u0422\u0438\u043F \u043F\u0435\u0440\u0435\u0434\u0430\u0447\u0438
