--- a/lecm-base/share/src/main/java/ru/it/lecm/base-share/base-share.properties
+++ b/lecm-base/share/src/main/java/ru/it/lecm/base-share/base-share.properties
@@ -17,3 +17,4 @@ button.connection.add=Add connection
 message.connection.add.success=Connection added
 message.connection.add.failure=Connection creation failure
 label.connected.documents=Connected documents
+label.connected.with.documents=Connected with documents
