1) Реализовано добавление записей в бизнес-журнал при добавлении, изменении и редактировании календарей, графиков и отсутствий, а также при старте, продлении и окончании отсутствия в офисе. 2) Исправлена проблема в сводной таблице отсутствий, связанная с разницей в часовых поясах сервера и пользователя. 3) Изменены частота и способ запуска, остановки и продления отсутствий (опять же, из-за возможных проблем при разнице часовых поясов).
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1398 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-calendar/repo/src/main/config/messages/calendar.properties
+++ b/lecm-calendar/repo/src/main/config/messages/calendar.properties
@@ -52,6 +52,10 @@ listconstraint.lecm-shed_shedule-types-constraint.SPECIAL=Special
 lecm-shed_shedule-model.property.lecm-shed_std-begin.title=Work beginning
 #<property name="lecm-shed:std-end">
 lecm-shed_shedule-model.property.lecm-shed_std-end.title=Work ending
+#<property name="lecm-shed:time-limit-start">
+lecm-shed_shedule-model.property.lecm-shed_time-limit-start.title=Shedule duration start
+#<property name="lecm-shed:time-limit-end">
+lecm-shed_shedule-model.property.lecm-shed_time-limit-end.title=Shedule duration end
 #<association name="lecm-shed:shed-employee-link-assoc">
 lecm-shed_shedule-model.association.lecm-shed_shed-employee-link-assoc.title=Employee/organisation unit
 #<child-association name="lecm-shed:contains-element">
