выделение api StateMachineServiceBean для StateMachineHelper - с выносом в него пары методов (пока), корторые реально вызываются из других бинов
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1403 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-statemachine/repo/pom.xml
+++ b/lecm-statemachine/repo/pom.xml
@@ -59,6 +59,11 @@
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>ru.it.lecm.statemachine</groupId>
+			<artifactId>statemachine-api</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>acegisecurity</groupId>
 			<artifactId>acegi-security</artifactId>
 		</dependency>
