--- a/lecm-statemachine/pom.xml
+++ b/lecm-statemachine/pom.xml
@@ -16,6 +16,7 @@
     <name>Logic ECM State Machine</name>
 
     <modules>
+        <module>api</module>
         <module>repo</module>
         <module>share</module>
     </modules>
