Тестирующий суб-модуль для проведения runtime-тестов. Тест создания документа и провода его по workflow с проверкой работы подсистемы безопасности. TODO: надо прописать настройки точно как в документе "Тестирование системы прав.xls", сейчас сделано - для ролей BR_1/BR_3 и user1..user3.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1404 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-integrotest/repo/pom.xml
+++ b/lecm-integrotest/repo/pom.xml
@@ -4,15 +4,17 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>ru.it.lecm.delegation</groupId>
-		<artifactId>lecm-delegation</artifactId>
+		<groupId>ru.it.lecm.integrotest</groupId>
+		<artifactId>lecm-integrotest</artifactId>
 		<version>0.1.0</version>
 	</parent>
 
-	<artifactId>lecm-delegation-repo</artifactId>
+	<artifactId>lecm-integrotest-repo</artifactId>
 	<packaging>amp</packaging>
-	<name>Logic ECM Delegation Repo</name>
-	<description>this is delegation repo module</description>
+
+	<name>Logic ECM Integral Test Repo</name>
+	<description>this is integral test repo module</description>
+
 	<properties>
 		<module.log.level>info</module.log.level>
 		<alfproject.version>4.0.c</alfproject.version>
@@ -35,6 +37,14 @@
 			<artifactId>alfresco-data-model</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-beans</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>acegisecurity</groupId>
 			<artifactId>acegi-security</artifactId>
 		</dependency>
@@ -54,31 +64,17 @@
 			<groupId>ru.it.lecm.orgstructure</groupId>
 			<artifactId>orgstructure-repo-api</artifactId>
 			<version>${project.version}</version>
-			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>ru.it.lecm.security</groupId>
 			<artifactId>lecm-security-api</artifactId>
 			<version>${project.version}</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>ru.it.lecm.delegation</groupId>
-			<artifactId>lecm-delegation-repo-api</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>ru.it.lecm.business-journal</groupId>
-			<artifactId>business-journal-repo-api</artifactId>
-			<version>${project.version}</version>
-			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>ru.it.lecm.integrotest</groupId>
 			<artifactId>lecm-integrotest-api</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-
 		<!-- Don't add here amp dependencies as it will break amp packaging -->
 	</dependencies>
 
