почистил pom.xml от всякого барахла
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1407 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-integrotest/pom.xml
+++ b/lecm-integrotest/pom.xml
@@ -13,13 +13,10 @@
 	<groupId>ru.it.lecm.integrotest</groupId>
 	<artifactId>lecm-integrotest</artifactId>
 	<packaging>pom</packaging>
-	<name>Logic ECM Integral Test Module</name>
+	<name>Logic ECM Integral Test</name>
 
 	<modules>
 		<module>api</module>
 		<module>repo</module>
-		<!-- 
-		<module>share</module>
-		  -->
 	</modules>
 </project>
