--- a/lecm-integrotest/api/pom.xml
+++ b/lecm-integrotest/api/pom.xml
@@ -16,110 +16,40 @@
 	<name>Logic ECM Integral Test API</name>
 	<description>this is integral test api module</description>
 
-	<properties>
-		<module.log.level>info</module.log.level>
-		<alfproject.version>4.0.c</alfproject.version>
-	</properties>
-	<!--
-		need to list these as a provided so that Maven doesn't download them
-		and include them in the AMP, they are provided by Alfresco
-	-->
 	<dependencies>
 		<dependency>
 			<groupId>org.alfresco</groupId>
 			<artifactId>alfresco-core</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.alfresco</groupId>
 			<artifactId>alfresco-data-model</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.alfresco</groupId>
 			<artifactId>alfresco-repository</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>ru.it.lecm.security</groupId>
 			<artifactId>lecm-security-api</artifactId>
 			<version>${project.version}</version>
+			<scope>provided</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>ru.it.lecm.orgstructure</groupId>
 			<artifactId>orgstructure-repo-api</artifactId>
 			<version>${project.version}</version>
+			<scope>provided</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>ru.it.lecm.statemachine</groupId>
 			<artifactId>statemachine-api</artifactId>
 			<version>${project.version}</version>
+			<scope>provided</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 		</dependency>
-
-		<!-- Don't add here amp dependencies as it will break amp packaging -->
 	</dependencies>
-
-	<!--
-		The scm is required for the buildnumber-maven-plugin which is required
-		for AMP version numbering
-	-->
-	<scm>
-		<connection>scm:svn:http://domain.com/svn/trunk/</connection>
-		<developerConnection>scm:svn:https://${user.name}@domain.com/svn/trunk/</developerConnection>
-		<url>http://domain.com/svn/trunk/</url>
-	</scm>
-
-	<build>
-		<plugins>
-			<!-- Needed for cross OS compatibility in acp/zip encoding -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-resources-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<artifactId>maven-nosnapshot-plugin</artifactId>
-				<groupId>org.alfresco.maven</groupId>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>buildnumber-maven-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>org.alfresco.maven.plugin</groupId>
-				<artifactId>maven-amp-plugin</artifactId>
-			</plugin>
-		</plugins>
-		<resources>
-			<resource>
-				<filtering>true</filtering>
-				<directory>src/main/resources</directory>
-				<excludes>
-					<exclude>**README-*</exclude>
-				</excludes>
-			</resource>
-			<!--
-				Copies and filters AMP config in the proper package
-				'alfresco/module/${project.artifactId}' so to enforce full module
-				naming single sourcing from POM properties
-			-->
-			<resource>
-				<filtering>true</filtering>
-				<directory>src/main/config</directory>
-				<targetPath>alfresco/module/${project.artifactId}</targetPath>
-				<excludes>
-					<exclude>**README-*</exclude>
-				</excludes>
-			</resource>
-		</resources>
-	</build>
 </project>
