убрал свой пустой скрипт и заюзал руслановский, нефиг плодить модули почем здря
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1409 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/server/alfresco/pom.xml
+++ b/server/alfresco/pom.xml
@@ -248,8 +248,8 @@
             <scope>runtime</scope>
         </dependency>
 		<dependency>
-			<groupId>ru.it.lecm.self-test</groupId>
-			<artifactId>self-test-repo</artifactId>
+			<groupId>ru.it.lecm.integrotest</groupId>
+			<artifactId>lecm-integrotest-repo</artifactId>
 			<version>${platform.version}</version>
 			<type>amp</type>
 			<scope>runtime</scope>
