ALF-444: Добавлены рекомендуемые связи и звязь по умолчанию
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1410 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/share/src/main/java/ru/it/lecm/base-share/base-share.properties
+++ b/lecm-base/share/src/main/java/ru/it/lecm/base-share/base-share.properties
@@ -18,3 +18,6 @@ message.connection.add.success=Connection added
 message.connection.add.failure=Connection creation failure
 label.connected.documents=Connected documents
 label.connected.with.documents=Connected with documents
+
+connection.types.show.all=Show all
+label.connection.add.title=Add connection
