ALF-451: Справочники. В справочниках переименовать элемент Префикс и др с латинского на русский
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1417 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-dictionary-test/repo/src/main/config/messages/dictionary-test.properties
+++ b/lecm-dictionary-test/repo/src/main/config/messages/dictionary-test.properties
@@ -11,3 +11,5 @@ lecm-dic-orgstr-test_dictionaryOrgstructureTest.association.lecm-dic-orgstr-test
 lecm-dic-orgstr-test_dictionaryOrgstructureTest.association.lecm-dic-orgstr-test_workGroup.title=Work group
 lecm-dic-orgstr-test_dictionaryOrgstructureTest.association.lecm-dic-orgstr-test_employee.title=Employee
 lecm-dic-orgstr-test_dictionaryOrgstructureTest.association.lecm-dic-orgstr-test_workRole.title=Work role
+
+lecm-dic-address_dictionaryAddress.property.lecm-dic-address_prefix.title=Prefix
