--- a/lecm-delegation/repo/pom.xml
+++ b/lecm-delegation/repo/pom.xml
@@ -77,6 +77,7 @@
 			<groupId>ru.it.lecm.integrotest</groupId>
 			<artifactId>lecm-integrotest-api</artifactId>
 			<version>${project.version}</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<!-- Don't add here amp dependencies as it will break amp packaging -->
