--- a/lecm-calendar/repo/pom.xml
+++ b/lecm-calendar/repo/pom.xml
@@ -39,14 +39,21 @@
 			<groupId>org.springframework.extensions.surf</groupId>
 			<artifactId>spring-surf</artifactId>
 		</dependency>
-		<!-- Don't add here amp dependencies as it will break amp packaging -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.quartz-scheduler</groupId>
 			<artifactId>quartz</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>rhino</groupId>
+			<artifactId>js</artifactId>
+			<version>1.6R7-patched</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>ru.it.lecm.orgstructure</groupId>
