--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,7 @@
 		<module>lecm-calendar</module>
 		<module>lecm-user-profile</module>
 		<module>lecm-integrotest</module>
+		<module>lecm-documents</module>
 	</modules>
     <scm>
         <connection>scm:svn:https://svn.datateh.ru/alfrescoecm/Business Platform/trunk/</connection>
