Связи перенесены из base в documents
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1439 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-orgstructure/repo/pom.xml
+++ b/lecm-orgstructure/repo/pom.xml
@@ -101,6 +101,11 @@
 			<version>${project.version}</version>
 			<scope>provided</scope>
 		</dependency>
+        <dependency>
+            <groupId>ru.it.lecm.documents</groupId>
+            <artifactId>documents-repo-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 		<!-- Don't add here amp dependencies as it will break amp packaging -->
     </dependencies>
     <!--
