--- a/lecm-documents/repo/pom.xml
+++ b/lecm-documents/repo/pom.xml
@@ -58,6 +58,11 @@
             <artifactId>documents-repo-api</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>ru.it.lecm.base</groupId>
+            <artifactId>base-repo-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
         <!-- Don't add here amp dependencies as it will break amp packaging -->
     </dependencies>
     <!--
