--- a/lecm-documents/share/src/main/java/ru/it/lecm/documents/form.properties
+++ b/lecm-documents/share/src/main/java/ru/it/lecm/documents/form.properties
@@ -1,2 +1,12 @@
 page.lecm.document.title=Document
 page.lecm.document.description=Document card
+
+info.connections=Connections
+button.connection.add=Add connection
+message.connection.add.success=Connection added
+message.connection.add.failure=Connection creation failure
+label.connected.documents=Connected documents
+label.connected.with.documents=Connected with documents
+
+connection.types.show.all=Show all
+label.connection.add.title=Add connection
