Добавил валидаторы в форму создания особого графика работы: 1) проверка на обязательные поля в контроле выбора правил повторения; 2) проверка дат интервала действия графика.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1440 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-calendar/share/src/main/java/ru/it/lecm/wcalendar/form/form.properties
+++ b/lecm-calendar/share/src/main/java/ru/it/lecm/wcalendar/form/form.properties
@@ -52,6 +52,11 @@ label.shedule.form.shift-work.non-working-days=Non-working days
 label.shedule.form.reiteration-rules=Reiteration rules
 label.shedule.create-new-special.title=New special shedule
 label.shedule.create-new-common.title=New common shedule
+message.error.shedule.shedule-date-limit-validation.early-end=Shedule limit end end is earlier than its beginning
+message.error.shedule.reiteration-rules-validation.week-days=You should choose at least one day of week
+message.error.shedule.reiteration-rules-validation.month-days=You should choose at least one ady of month
+message.error.shedule.reiteration-rules-validation.shift-work=Working and non-working days should be a number above null
+message.error.shedule.reiteration-rules-validation.reiteration-type=You should choose reiteration type
 
 label.wcalendar.menu.calendar.btn=Work time calendar
 label.wcalendar.menu.shedule.btn=Shedule
