[~] ALF-523. Доработка формы списка машин состояний
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1447 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/repo/src/main/config/messages/lecm-contracts-workflow-model.properties
+++ b/lecm-contracts/repo/src/main/config/messages/lecm-contracts-workflow-model.properties
@@ -1,2 +1,5 @@
 statemachine.contractWorkflow.title=Contract Workflow
 statemachine.contractWorkflow.description=Contract Workflow description
+
+lecm-contract_model.type.lecm-contract_document.title=Organization Element
+lecm-contract_model.type.lecm-contract_document.description=Organization Element
