[+] добавлено поле для хранения описания в модель документа [+]подправлен справочник "Тип объектов" для расширенного хранения текстового представления
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1454 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-business-journal/repo/src/main/config/messages/business-journal.properties
+++ b/lecm-business-journal/repo/src/main/config/messages/business-journal.properties
@@ -6,6 +6,8 @@ lecm-busjournal_businessJournalModel.property.lecm-busjournal_objectType-class.t
 lecm-busjournal_businessJournalModel.property.lecm-busjournal_objectType-class.description=Class name
 lecm-busjournal_businessJournalModel.property.lecm-busjournal_objectType-template.title=Template String
 lecm-busjournal_businessJournalModel.property.lecm-busjournal_objectType-template.description=Template String
+lecm-busjournal_businessJournalModel.property.lecm-busjournal_objectType-list-template.title=List Template String
+lecm-busjournal_businessJournalModel.property.lecm-busjournal_objectType-list-template.description=List Template String
 
 lecm-busjournal_businessJournalModel.type.lecm-busjournal_eventCategory.title=Event Category
 lecm-busjournal_businessJournalModel.type.lecm-busjournal_eventCategory.description=Event Category
