Дашлет "Основные сведения". Добавлена кнопка просмотра, кнопка редактирования данных.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1468 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/main/dashlet/main.get.properties
+++ b/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/main/dashlet/main.get.properties
@@ -1,3 +1,6 @@
 label.title=Main
 dashlet.help=<p>Dashlet "Document Main" is designed to...</p>
 dashlet.help.tooltip=Show help
+dashlet.edit.tooltip=Edit
+dashlet.view.tooltip=View
+dashlet.button.cancel=Cancel
