ALF-455 Структура карточки - Общее описание интерфейса
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1470 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/custom/dashlet/custom.get.properties
+++ b/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/custom/dashlet/custom.get.properties
@@ -1,3 +1,4 @@
 label.title=Custom
 dashlet.help=<p>Dashlet "Custom" is designed to...</p>
 dashlet.help.tooltip=Show help
+dashlet.collapse.tooltip=Collapse
