новая иерархия папок в хранилище с учетом нарезки прав пока что ни в одном модуле кроме делегирования она не используется, поэтому ни на что повлиять не могла
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1475 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-delegation/repo/src/main/config/log4j.properties
+++ b/lecm-delegation/repo/src/main/config/log4j.properties
@@ -38,4 +38,5 @@
    #
    #-----------------------------------------------------------------------
 
-   log4j.logger.ru.it.lecm.delegation=${module.log.level}
+log4j.logger.ru.it.lecm.delegation=${module.log.level}
+# log4j.logger.ru.it.lecm.base.beans.RepositoryStructureHelper=TRACE
