[~]ALF-455 Структура карточки - Общее описание интерфейса [+]Заготовки по ALF-459 Участники (дашлет), ALF-473 Участники документа (правая область)
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1478 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/members/dashlet/members.get.properties
+++ b/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/members/dashlet/members.get.properties
@@ -1,3 +1,2 @@
 label.title=Members
-dashlet.help=<p>Dashlet "Members" is designed to...</p>
-dashlet.help.tooltip=Show help
+dashlet.expand.tooltip=Expand
