ALF-378 Импорт-экспорт машины состояний
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1485 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-statemachine-editor/share/src/main/java/ru/it/lecm/statemachine/editor/editor.properties
+++ b/lecm-statemachine-editor/share/src/main/java/ru/it/lecm/statemachine/editor/editor.properties
@@ -23,3 +23,6 @@ statemachine.editor.form.permissions=Permissions
 lecm-stmeditor_statusTransitionType=Transition Type
 lecm-stmeditor_statusExpression=Expression
 lecm-stmeditor_statusTarget=Status
+
+button.export-xml=Export XML
+button.import-xml=Import XML
