[+] ALF-463. Обязательные атрибуты
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1504 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-statemachine-editor/share/src/main/java/ru/it/lecm/statemachine/editor/editor.properties
+++ b/lecm-statemachine-editor/share/src/main/java/ru/it/lecm/statemachine/editor/editor.properties
@@ -11,8 +11,10 @@ statemachine.editor.form.label.userTransition=Transitions
 statemachine.editor.form.label.transitionWorkflow=Transitions with workflow start
 statemachine.editor.form.label.inputWorkflowData=Input Data
 statemachine.editor.form.label.outputWorkflowData=Output Data
+statemachine.editor.form.label.conditionAccessField=Conditions Access
 statemachine.editor.form.label.workflows=Workflows
 statemachine.editor.form.label.expressions=Expressions
+statemachine.editor.form.label.statusFields=Available Fields for editing
 
 statemachine.editor.form.info=Info
 statemachine.editor.form.behavior=Behavior
