--- a/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model.properties
+++ b/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model.properties
@@ -15,6 +15,8 @@ lecm-stmeditor_model.property.lecm-stmeditor_outputFromType.title=\u0422\u0438\u
 lecm-stmeditor_model.property.lecm-stmeditor_outputFromValue.title=\u0417\u043D\u0430\u0447\u0435\u043D\u0438\u0435
 lecm-stmeditor_model.property.lecm-stmeditor_outputToType.title=\u041F\u0435\u0440\u0435\u0434\u0430\u0447\u0430 \u0432 \u043C\u0430\u0448\u0438\u043D\u0443 \u0441\u043E\u0441\u0442\u043E\u044F\u043D\u0438\u0439
 
+lecm-stmeditor_model.property.lecm-stmeditor_condition.title=Condition
+lecm-stmeditor_model.property.lecm-stmeditor_conditionErrorMessage.title=Error Message
 
 lecm-stmeditor_model.property.lecm-stmeditor_transitionWorkflowId.title=Workflow
 lecm-stmeditor_model.property.lecm-stmeditor_workflowLabel.title=Title
