--- a/lecm-base/share/src/main/java/ru/it/lecm/base-share/base-share.properties
+++ b/lecm-base/share/src/main/java/ru/it/lecm/base-share/base-share.properties
@@ -9,5 +9,6 @@ logicecm.base.elements-for-select=Elements for selection
 logicecm.base.selected-elements=Selected elements
 logicecm.base.select-tree-element=Please, select element from tree
 logicecm.base.create-new-button.label=+
+logicecm.base.show-arhive.label=Show arhive
 
 label.limit_reached=Limit reached: records were found more than returned. Please edit your search query to get the other records.
