--- a/lecm-calendar/repo/src/main/config/log4j.properties
+++ b/lecm-calendar/repo/src/main/config/log4j.properties
@@ -39,3 +39,4 @@
    #-----------------------------------------------------------------------
 
 log4j.logger.ru.it.lecm.wcalendar=${module.log.level}
+# log4j.logger.ru.it.lecm.base.beans.RepositoryStructureHelperImpl=TRACE
