--- a/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/main/dashlet/main.get.properties
+++ b/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/main/dashlet/main.get.properties
@@ -1,5 +1,3 @@
 label.title=Main
-dashlet.help=<p>Dashlet "Document Main" is designed to...</p>
-dashlet.help.tooltip=Show help
 dashlet.edit.tooltip=Edit
-dashlet.view.tooltip=View
+dashlet.expand.tooltip=Expand
