ALF-487:  Карточка контента
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1543 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/java/ru/it/lecm/documents/form.properties
+++ b/lecm-documents/share/src/main/java/ru/it/lecm/documents/form.properties
@@ -1,6 +1,11 @@
 page.lecm.document.title=Document
 page.lecm.document.description=Document card
 
+page.lecm.document.attachment.title=Document content
+page.lecm.document.attachment.description=Document content card
+
+title.documents=Documents
+
 info.connections=Connections
 button.connection.add=Add connection
 message.connection.add.success=Connection added
